<resources>

    <!--First-->
    <string name="welcome">Welcome</string>
    <string name="description_first">Manage your subscriptions, lower your bills and stay on top of your financial life.</string>
    <string name="continue_button">Continue</string>

    <!--Login-->
    <string name="text_view_big_login_fragment">Let\'s get started</string>
    <string name="text_l">Enter your phone number. We will send you\na confirmation code there</string>
    <string name="edit_text_phone_number_login_fragment">Mobile Number</string>
    <string name="button_continue_login_fragment">Continue</string>

    <!--CountryCode-->
    <string name="text_view_country_code_fragment">Country</string>

    <!--CodeSend-->
    <string name="text_view_big_code_send_fragment">Code</string>
    <string name="text_view_enter_code_code_send_fragment">Enter the code you received</string>
    <string name="text_view_do_not_have_code_code_send_fragment">Don\'t have a code?</string>
    <string name="text_view_resend_code_code_send_fragment">Resend code again after %1$s</string>

    <string name="app_name">Buyupix</string>
    <string name="name_app">Buyupix</string>

    <!--CreateSubscription-->
    <string name="create_subscription">Create Sub</string>
    <string name="create_name_subscription">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="reminder">Reminder</string>
    <string name="button_create">Create</string>
    <string name="write_off_date">Write-off date</string>

    <!--Calendar-->
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

    <!--SubscriptionInfo-->
    <string name="subscription_info">Subs info</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="priceInfo">%1$s%2$s</string>

    <!--Navigation-->
    <string name="home">Home</string>
    <string name="statistics">Statistic</string>
    <string name="settings">Settings</string>

    <!--Settings-->
    <string name="alert">Alert</string>
    <string name="darkMode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="sign_out">Exit</string>

    <!--Home-->
    <string name="text_view_do_not_have_subscription_home_fragment">You don\'t have any subscriptions yet.\nLet\'s create one right now</string>
    <string name="button_create_home_fragment">Create</string>

    <!--AutoCompleteText-->
    <!--27-->
    <string-array name="names">
        <item>Apple One</item>
        <item>Discord Nitro</item>
        <item>Dr.Web</item>
        <item>Dropbox</item>
        <item>Flo</item>
        <item>Google Drive</item>
        <item>Kaspersky</item>
        <item>Kion</item>
        <item>MTC Premium</item>
        <item>IVI</item>
        <item>Megogo</item>
        <item>Microsoft 365</item>
        <item>MyBook</item>
        <item>Netflix</item>
        <item>NordVpn</item>
        <item>Ozon Premium</item>
        <item>PornHub</item>
        <item>Premier One</item>
        <item>Pure</item>
        <item>Spotify</item>
        <item>Start</item>
        <item>Tinkoff Pro</item>
        <item>Vk Combo</item>
        <item>YouTube</item>
        <item>Амедиотека</item>
        <item>ЛитРес</item>
        <item>СберПрайм</item>
    </string-array>

    <!--Statistic-->
    <string name="full_price">%1$s USD</string>
    <string name="gaming_category">Gaming · $%1$s</string>
    <string name="defence_category">Defence · $%1$s</string>
    <string name="cloud_category">Cloud · $%1$s</string>
    <string name="movies_category">Movies · $%1$s</string>
    <string name="books_category">Books · $%1$s</string>
    <string name="music_category">Music · $%1$s</string>
    <string name="other_category">Other · $%1$s</string>
    <string name="subscriptions">Subscriptions</string>


    <!--CustomRecyclerAdapterSubscriptions-->
    <string name="price_adapter_subscriptions">%1$s%2$s</string>
    <string name="date_adapter_subscriptions">%1$s %2$s</string>

    <!--PieChart-->
    <string-array name="pie_chart_color_array">
        <item>#E480F4</item>
        <item>#6CC3F3</item>
        <item>#7167ED</item>
        <item>#D9455F</item>
        <item>#6054EA</item>
    </string-array>
    
</resources>