<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.fragments.LoginFragment">

    <TextView
        android:id="@+id/text_view_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_view_big_login_fragment"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/text_l"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_big" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/country_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_main"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_click_country_login_fragment"
        android:fontFamily="@font/roboto"
        android:gravity="start|center_vertical"
        android:textAllCaps="false"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_main"
        app:layout_constraintEnd_toStartOf="@id/phone_number_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_1" />

    <EditText
        android:id="@+id/phone_number_edit_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_main"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="@dimen/margin_end"
        android:background="@drawable/input_type_2"
        android:fontFamily="@font/roboto"
        android:hint="@string/edit_text_phone_number_login_fragment"
        android:paddingStart="@dimen/padding_start"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:textSize="@dimen/text_size_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/country_button"
        app:layout_constraintTop_toBottomOf="@id/text_view_1"
        tools:ignore="Autofill,RtlSymmetry,TextFields,VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_button"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_end"
        android:background="@drawable/input_button"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/button_continue_login_fragment"
        android:textAllCaps="false"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_size_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>