<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".presentation.fragments.FirstFragment">

    <ImageView
        android:id="@+id/first_activity_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/first_activity_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="@dimen/margin_end"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/welcome"
        android:textColor="@color/text_main"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_activity_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end"
        android:fontFamily="@font/roboto"
        android:text="@string/description_first"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/size_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginBottom="26dp"
        android:background="@drawable/item_background_button_create_subscription"
        android:fontFamily="@font/roboto_medium"
        android:stateListAnimator="@null"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        android:textColor="@color/text_main2"
        android:textSize="@dimen/size_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>